Initial Template Commit

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Free coming soon template with jQuery countdown">
-    <meta name="author" content="http://bootstraptaste.com">
+    <meta name="description" content="Pan Fried Ventures. We are thought partners for early-stage start-ups across domains in India.">
+    <meta name="author" content="Pan Fried Ventures">
 
     <title>Pan Fried Ventures</title>
 
@@ -14,15 +14,8 @@
 	<link href="assets/css/bootstrap-theme.css" rel="stylesheet">
 	<link href="assets/css/font-awesome.css" rel="stylesheet">
 
-    <!-- siimple style -->
+    <!-- Custom Style -->
     <link href="assets/css/style.css" rel="stylesheet">
-    
-    <!-- =======================================================
-        Theme Name: WeBuild
-        Theme URL: https://bootstrapmade.com/free-bootstrap-coming-soon-template-countdwon/
-        Author: BootstrapMade
-        Author URL: https://bootstrapmade.com
-    ======================================================= -->
   </head>
 
   <body>
@@ -32,23 +25,34 @@
 			<div class="row">
 				<div class="col-md-12">
 					<h1><br><center>Pan Fried Ventures</center></h1>
-					<h2 class="subtitle">We are thought partners for early-stage start-ups.</h2>
+					<h2 class="subtitle">We are thought partners for early-stage start-ups across domains.</h2>
 					<br>
                     <br>
+                    <!-- Content for Thanks Page -->
+                    <!-- <a href="#">Go back</a> -->
 
-					<form class="form-inline signup" role="form">
+                    <!-- Form --> 
+					<form class="form signup inline" role="form" method="POST" action="http://formspree.io/hello@panfriedventures.com"><center>
 					  <div class="form-group">
-					    <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Enter your email address">
-					  </div>
-					  <button type="submit" class="btn btn-theme">Get notified!</button>
+					    <input type="email" name="_replyto" class="form-control" id="EMail" placeholder="Your Email Address"><br>
+                        <textarea name="message" class="form-control" id="Message" placeholder="Your Message"></textarea>
+                        <input type="hidden" name="_subject" value="New Mail from Site!" />
+                        <input type="hidden" name="_next" value="//panfriedventures.com/thanks.html" />
+					  </div><br>
+					  <button type="submit" class="btn btn-theme">Reach Out</button></center>
 					</form>		
-                    <!-- Social Icons
+
+                    <!-- Form --> 
+                    <!-- Social Icons -->
+                    <!--
                     <div class="social">
                         <a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a>
                          <a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a>
                          <a href="#"><i class="fa fa-google-plus" aria-hidden="true"></i></a>
                          <a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
-                    </div> -->
+                    </div> 
+                -->
+                    <!-- Social Icons -->
 				</div>
 				
 			</div>
