--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     <!-- <a href="#">Go back</a> -->
 
                     <!-- Form --> 
-					<form class="form signup inline" role="form" method="POST" action="http://formspree.io/hello@panfriedventures.com"><center>
+					<form class="form signup inline" role="form" method="POST" action="https://formspree.io/rito@panfriedventures.com"><center>
 					  <div class="form-group">
 					    <input type="email" name="_replyto" class="form-control" id="EMail" placeholder="Your Email Address"><br>
                         <textarea name="message" class="form-control" id="Message" placeholder="Your Message"></textarea>
