Form Validation Update

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 					    <input type="email" name="_replyto" class="form-control" id="EMail" placeholder="Your Email Address"><br>
                         <textarea name="message" class="form-control" id="Message" placeholder="Your Message"></textarea>
                         <input type="hidden" name="_subject" value="New Mail from Site!" />
-                        <input type="hidden" name="_next" value="//panfriedventures.com/thanks.html" />
+                        <input type="hidden" name="_next" value="https://panfriedventures.com/thanks.html" />
 					  </div><br>
 					  <button type="submit" class="btn btn-theme">Reach Out</button></center>
 					</form>		
