minor content update

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 			<div class="row">
 				<div class="col-md-12">
 					<h1><br><center>Pan Fried Ventures</center></h1>
-					<h2 class="subtitle">We are thought partners for early-stage start-ups across domains.</h2>
+					<h2 class="subtitle">Thought partners for early-stage start-ups across domains.</h2>
 					<br>
                     <br>
                     <!-- Content for Thanks Page -->
